# bs

./: CMakeLists.txt  README.md
benches/: benchmark_apply_op.cpp  benchmark_count.cpp  benchmark_flip.cpp
examples/: dbitset.hpp
include/: bitset.hpp  dynamic_bitset.hpp  pos_bitset.hpp
scripts/: build.sh  run.sh
tests/: test_bitset.cpp
